[package]
name = "vodozemac-cpp"
version = "0.1.0"
edition = "2021"

[lib]
name = "vodozemac"
crate-type = ["staticlib"]

[dependencies]
anyhow = "1.0.42"
cxx = "1.0"
vodozemac = { git = "https://github.com/matrix-org/vodozemac/", rev = "6e5e9a9eaf7a4ece7cd581fcb7e64c457497523d" }

[build-dependencies]
cxx-build = "1.0"
