[package]
name = "vodozemac-cpp"
version = "0.7.0"
edition = "2021"

[lib]
name = "vodozemac"
crate-type = ["staticlib"]

[dependencies]
anyhow = "1.0.42"
cxx = "1.0"

[dependencies.vodozemac]
git = "https://github.com/matrix-org/vodozemac/"
#rev = "ce21316266fabaa3717363d5f410fb7943ecdb10"
rev = "92d6acca73b619a28440003f22c89b4127dd3fdb"

[build-dependencies]
cxx-build = "1.0"
