[package]
name = "vodozemac-javascript"
version = "0.1.0"
edition = "2021"

[lib]
name = "vodozemac"
crate-type = ["cdylib"]

[dependencies.vodozemac]
git = "https://github.com/matrix-org/vodozemac"
rev = "d0e744287a14319c2a9148fef3747548c740fc36"
features = ["js"]

[dependencies]
wasm-bindgen = "0.2.80"
js-sys = "0.3.57"
serde-wasm-bindgen = "0.4.2"
