[package]
name = "vodozemac-python"
version = "0.1.0"
edition = "2021"

[lib]
name = "vodozemac"
crate-type = ["cdylib"]

[dependencies]
paste = "1.0.9"
thiserror = "1.0.37"

[package.metadata.maturin]
name = "vodozemac"

[dependencies.vodozemac]
git = "https://github.com/matrix-org/vodozemac/"
rev = "fb609ca1e4df5a7a818490ae86ac694119e41e71"

[dependencies.pyo3]
version = "0.18.3"
features = ["extension-module"]
