[package]
name = "vodozemac-python"
version = "0.7.0"
edition = "2021"

[lib]
name = "vodozemac"
crate-type = ["cdylib"]

[dependencies]
paste = "1.0.15"
thiserror = "1.0.63"
vodozemac = { workspace = true }

[package.metadata.maturin]
name = "vodozemac"

[dependencies.pyo3]
version = "0.22.2"
features = ["extension-module"]
