[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

[tool.maturin]
name = "vodozemac"
bindings = "pyo3"

[project]
name = "vodozemac"
description = "Python bindings for vodozemac"
readme = "../README.md"
license = {file = "../LICENSE"}

[project.urls]
repository = "https://github.com/matrix-org/vodozemac-bindings"
